# TACOCAT

./: .coverage  .gitignore  AHTR_Geometry.py  Clad_Props.2.py  Clad_Props.py  Cladding Thermophysical Properties.rst  Cladding Thermophysical Properties.sql  Coolant_Props.py  FLiBe_Prop.py  Flinak_Prop_Verification.py  Flux_Profiles.py  Fuel_Props.py  Geometry_Value.py  HexDhCal.py  LICENSE  NaK_Prop.py  README.md  TACOCAT.py  TACOCAT_Read_In_File.py  TempBulkCal.py  UC_Prop.py  UPu_Zr10_Prop.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
LoadedTACO/src/: Clad_Props.py  Coolant_Value.py  FLiBe_Prop.py  Flux_Profiles.py  Geometry_Value.py  HegNu.py  HexDhCal.py  KF-ZrF4_Prop.py  NusseltNumber.py  TACOCAT.py  TempBulkCal.py
TACOCAT/src/: Flux_Profiles.py  Fuel_Props.py  Geometry_Value.py  HT9Props.py  HexDhCal.py  NaF_ZrF4_Prop.py  NaK_Prop.py  SquareDhCal.py  TempBulkCal.py
TacoCat/: README.md  main.py  requirements.txt
TacoCat/tacocat/: tacocat.py
Verification/: FLiBe_Prop.py  FLiBe_Prop_Verification.py  Flibe_Cp_Verification_Data.py  Flinak_Prop_Verification.py  NaK_Prop_Verification.py  Nafzirf_Prop_Verification.py  Practice.py
Verification/Flibe/: ORNL-4344.csv  ORNL-4396.csv
docs/: UROP 2024 Abstract.docx  placeholder.md
docs/source/: conf.py  (+1 more)
src/: FLiNaK_Prop.py  TempBulkCal.py
src.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: FLiBe_Prop_Verification.py  Flinak_Prop_Verification.py  test_Flux_Profiles.py  test_HexDhCal.py  test_SquareDhCal.py  test_fluxIntegration.py
(+43 files in other folders)
