[metadata]
name = src
description = package for TACOCAT files
author = Dr. Lane Carasik, Trevor Franklin, Sierra Tutwiller
license = MIT
license_file = LICENSE
platforms = windows, unix, osx
classifiers =
	Programming Language :: Python :: 2
	Programming Language :: Python :: 3

[Options]
packages =
	src
install_requires =
	request>=2
python_requires = >=3.6
package_dir =
	=LoadedTACO
zip_safe = no

[options.testing_require]
testing =
	pytest>=6.0
	pytest-cov>=2.0
	tox>=3.24

[options.package_data]
slapping = py.typed

