[metadata]
name = src
description = package for TACOCAT files
author = Dr. Lane Carasik, Trevor Franklin, Sierra Tutwiller
license = MIT
license_file = LICENSE
platforms = windows, unix, osx
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[Options]
packages =
	src
install_requires =
	request>=2
python_requires = >=3.6
package_dir =
	=LoadedTACO
zip_safe = no

[options.extras_require]
testing =
	pytest>=6.0
	pytest-cov>=2.0
	tox>=3.24

[options.package_data]
src = py.typed

